--- a/commands.tex
+++ b/commands.tex
@@ -37,6 +37,7 @@
 \DeclareMathOperator{\RHom}{\mathbf{R}Hom} %derived usual Hom
 \DeclareMathOperator{\RlHom}{\mathbf{R}\mathcal{H}\mathit{om}} %derived local Hom
 \DeclareMathOperator{\RG}{\mathbf{R}\Gamma} %derived global sections
+\DeclareMathOperator{\cone}{cone}
 
 \DeclareMathOperator*{\ulalim}{\underleftarrow\lim}
 \graphicspath{{images/}}
@@ -92,6 +93,7 @@
 \newcommand{\vsig}{\vec{\sigma}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
+\newcommand{\calD}{\mathcal{D}}
 \newcommand{\norm}[1]{\left\lVert #1 \right\rVert}
 \newcommand{\comp}{\circ}
 \renewcommand{\O}{\mathcal{O}}
@@ -99,6 +101,7 @@
 \renewcommand{\v}{{u_2}}
 \newcommand{\laplace}{\Delta}
 \renewcommand{\line}[2]{{\overrightarrow{#1,#2}}}
+\newcommand{\id}{\mathrm{id}}
 
 \newcommand{\todo}[1]{{\color{red}\textbf{TODO!: #1}}}
 
