--- a/main.tex
+++ b/main.tex
@@ -1,22 +1,14 @@
 \documentclass{article}
+
 \usepackage[utf8]{inputenc}
-
-%\usepackage[math]{kurier} %% chooses font family 
 \usepackage{kpfonts}
-%\usepackage[bitstream-charter]{mathdesign}
-%\usepackage{boisik}
-
 \usepackage[T1]{fontenc}
-
-\input{commands.tex}
-
-\title{Derived Categories of Coherent Sheaves}
-\author{Ines Chung-Halpern, Calum Crossley, Bogdan Simeonov}
-\date{}
 
 \usepackage{geometry}
 \geometry{a4paper, left=30mm, right=30mm, top=20mm, bottom=20mm}
 
+\setlength{\parindent}{0em}
+\setlength{\parskip}{1em}
 \renewcommand{\baselinestretch}{1.5}
 
 \makeatletter
@@ -25,8 +17,12 @@
             {1.25ex \@plus .25ex}%
             {\normalfont\normalsize\bfseries}}
 \makeatother
-\setcounter{secnumdepth}{4} % how many sectioning levels to assign numbers to
-\setcounter{tocdepth}{4}    % how many sectioning levels to show in ToC
+
+\input{commands.tex}
+
+\title{Derived Categories of Coherent Sheaves}
+\author{Ines Chung-Halpern, Calum Crossley, Bogdan Simeonov}
+\date{}
 
 \begin{document}
 
