More stuff on admissible subcategories: need proof of blowup and projective bundle formulas

--- a/commands.tex
+++ b/commands.tex
@@ -30,7 +30,7 @@
 
 \newtcbtheorem[use counter from = theorem]{proposition}{Proposition} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=white, fonttitle = \upshape\bfseries,  fontupper=\itshape}{prop}
 
-\newtcbtheorem[use counter from = theorem]{cor}{Corollary} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=white, fonttitle = \upshape\bfseries,  fontupper=\itshape}{cor}
+\newtcbtheorem[use counter from = theorem]{corollary}{Corollary} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=white, fonttitle = \upshape\bfseries,  fontupper=\itshape}{cor}
 
 \newtcbtheorem[use counter from = theorem]{lemma}{Lemma} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=white, fonttitle = \upshape\bfseries,  fontupper=\itshape}{lemma}
 
